--- a/.github/workflows/test-sonar.yml
+++ b/.github/workflows/test-sonar.yml
@@ -13,15 +13,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Baixar artefato do build
-        uses: actions/download-artifact@v4
-        with:
-          name: learning-pipes-app
 
       - name: Rodar testes
         run: mvn test
