--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,8 +49,9 @@ jobs:
           mvn verify sonar:sonar \
             -Dsonar.projectKey=mariomendonca_learning-pipelines \
             -Dsonar.organization=mariomendonca \
+            -Dsonar.projectName=learning-pipelines \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
             -DskipTests
 
       - name: 📊 SonarCloud Quality Gate
